Replaces NamedRouteHandler and update logic to map route handlers for Rest request
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>